--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,6 @@
       application.</noscript
     >
     <div id="root"></div>
-    <script src="index.tsx"></script>
+    <script src="example.tsx"></script>
   </body>
 </html>
